--- a/Silhouette.vcxproj
+++ b/Silhouette.vcxproj
@@ -137,58 +137,30 @@
     <ClCompile Include="App\AssetManager.cpp" />
     <ClCompile Include="App\GameApp.cpp" />
     <ClCompile Include="App\InputEventManager.cpp" />
-    <ClCompile Include="App\Main.cpp" />
+    <ClCompile Include="App\PerfTimer.cpp" />
+    <ClCompile Include="Gameplay\Components\CameraComponent.cpp" />
+    <ClCompile Include="Platformer\Main.cpp" />
     <ClCompile Include="App\ShaderManager.cpp" />
     <ClCompile Include="Core\Event.cpp" />
     <ClCompile Include="Core\NameHash.cpp" />
     <ClCompile Include="Core\TypeInfo.cpp" />
+    <ClCompile Include="External\Pugixml\pugixml.cpp" />
+    <ClCompile Include="Gameplay\Component.cpp" />
+    <ClCompile Include="Gameplay\Components\SpriteComponent.cpp" />
     <ClCompile Include="Gameplay\GameObject.cpp" />
     <ClCompile Include="Gameplay\GameSystem.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\ObjectBucket.cpp" />
     <ClCompile Include="Gameplay\World.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\LoadWorld.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\WorldGrid.cpp" />
+    <ClCompile Include="Platformer\PlatformerApp.cpp" />
+    <ClCompile Include="Platformer\Player.cpp" />
+    <ClCompile Include="Platformer\SpawnByName.cpp" />
     <ClCompile Include="Util\Random.cpp" />
     <ClCompile Include="Core\Reference.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\TilePatch.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileFactory.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\Graphics\Glsl.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\Graphics\Rect.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\String.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\Thread.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\ThreadLocalPtr.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\Utf.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\Vector2.inl" />
-    <None Include="External\SFML-2.5.1\include\SFML\System\Vector3.inl" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-main-d.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-main-s.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-audio-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-audio.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-graphics-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-graphics.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-network-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-network.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-system-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-system.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-window-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-window.exp" />
     <None Include="Resources\Shaders\LightShader.frag" />
     <None Include="Resources\Shaders\LightShader.vert" />
     <None Include="Resources\Shaders\SimpleLight.frag" />
@@ -197,109 +169,17 @@
     <ClInclude Include="App\AssetManager.h" />
     <ClInclude Include="App\GameApp.h" />
     <ClInclude Include="App\InputEventManager.h" />
+    <ClInclude Include="App\PerfTimer.h" />
     <ClInclude Include="App\ShaderManager.h" />
     <ClInclude Include="Core\BasicTypes.h" />
     <ClInclude Include="Core\Core.h" />
     <ClInclude Include="Core\Event.h" />
     <ClInclude Include="Core\TypeInfo.h" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\AlResource.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Export.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\InputSoundFile.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Listener.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Music.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\OutputSoundFile.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Sound.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundBuffer.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundBufferRecorder.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileFactory.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileReader.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileWriter.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundRecorder.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundSource.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundStream.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Config.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\GpuPreference.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\BlendMode.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\CircleShape.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Color.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\ConvexShape.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Drawable.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Export.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Font.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Glsl.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Glyph.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Image.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\PrimitiveType.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Rect.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RectangleShape.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderStates.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderTarget.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderTexture.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderWindow.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Shader.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Shape.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Sprite.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Text.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Texture.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Transform.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Transformable.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Vertex.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\VertexArray.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\VertexBuffer.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\View.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Main.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Export.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Ftp.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Http.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\IpAddress.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Packet.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Socket.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\SocketHandle.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\SocketSelector.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\TcpListener.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\TcpSocket.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\UdpSocket.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\OpenGL.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Clock.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Err.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Export.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\FileInputStream.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\InputStream.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Lock.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\MemoryInputStream.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Mutex.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\NativeActivity.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\NonCopyable.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Sleep.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\String.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Thread.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\ThreadLocal.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\ThreadLocalPtr.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Time.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Utf.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Vector2.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Vector3.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Clipboard.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Context.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\ContextSettings.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Cursor.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Event.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Export.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\GlResource.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Joystick.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Keyboard.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Mouse.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Sensor.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Touch.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\VideoMode.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Window.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\WindowHandle.hpp" />
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\WindowStyle.hpp" />
+    <ClInclude Include="External\Pugixml\pugiconfig.hpp" />
+    <ClInclude Include="External\Pugixml\pugixml.hpp" />
+    <ClInclude Include="Gameplay\Component.h" />
+    <ClInclude Include="Gameplay\Components\CameraComponent.h" />
+    <ClInclude Include="Gameplay\Components\SpriteComponent.h" />
     <ClInclude Include="Gameplay\GameObject.h" />
     <ClInclude Include="Gameplay\Gameplay.h" />
     <ClInclude Include="Gameplay\GameSystem.h" />
@@ -309,6 +189,10 @@
     <ClInclude Include="Gameplay\WorldGrid\TileConstants.h" />
     <ClInclude Include="Gameplay\World.h" />
     <ClInclude Include="Gameplay\WorldGrid\WorldGrid.h" />
+    <ClInclude Include="Platformer\PlatformerApp.h" />
+    <ClInclude Include="Platformer\Player.h" />
+    <ClInclude Include="Platformer\SpawnByName.h" />
+    <ClInclude Include="Util\Rect.h" />
     <ClInclude Include="Util\MapUtil.h" />
     <ClInclude Include="Util\Math.h" />
     <ClInclude Include="Core\NameHash.h" />
@@ -318,20 +202,6 @@
     <ClInclude Include="Gameplay\WorldGrid\Tileset.h" />
     <ClInclude Include="Util\Vec2.h" />
     <ClInclude Include="Util\VectorUtil.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-main-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-network-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-system-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-window-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-audio.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-graphics.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-main.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-network.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-system.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-window.lib" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
