--- a/Silhouette.vcxproj.filters
+++ b/Silhouette.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="Gameplay\WorldGrid\TilePatch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="App\Main.cpp">
+    <ClCompile Include="Platformer\Main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="App\AssetManager.cpp">
@@ -66,6 +66,30 @@
     <ClCompile Include="Gameplay\WorldGrid\LoadWorld.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Platformer\SpawnByName.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="External\Pugixml\pugixml.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Gameplay\Components\SpriteComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Gameplay\Component.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Platformer\Player.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Platformer\PlatformerApp.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Gameplay\Components\CameraComponent.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="App\PerfTimer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\LightShader.frag">
@@ -73,60 +97,6 @@
     </None>
     <None Include="Resources\Shaders\SimpleLight.frag" />
     <None Include="Resources\Shaders\LightShader.vert" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-main-d.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-main-s.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-network-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-system-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window.pdb" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window-d.exp" />
-    <None Include="External\SFML-2.5.1\lib\Debug\sfml-window-d-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-audio.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-audio-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-graphics.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-graphics-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-network.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-network-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-system.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-system-2.dll" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-window.exp" />
-    <None Include="External\SFML-2.5.1\lib\Release\sfml-window-2.dll" />
-    <None Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileFactory.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\Graphics\Glsl.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\Graphics\Rect.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\String.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\Thread.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\ThreadLocalPtr.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\Utf.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\Vector2.inl">
-      <Filter>Header Files</Filter>
-    </None>
-    <None Include="External\SFML-2.5.1\include\SFML\System\Vector3.inl">
-      <Filter>Header Files</Filter>
-    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gameplay\WorldGrid\TilePatch.h">
@@ -207,313 +177,35 @@
     <ClInclude Include="Gameplay\WorldGrid\LoadWorld.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window.hpp">
+    <ClInclude Include="Platformer\SpawnByName.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\AlResource.hpp">
+    <ClInclude Include="External\Pugixml\pugiconfig.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Export.hpp">
+    <ClInclude Include="External\Pugixml\pugixml.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\InputSoundFile.hpp">
+    <ClInclude Include="Platformer\Player.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Listener.hpp">
+    <ClInclude Include="Gameplay\Components\SpriteComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Music.hpp">
+    <ClInclude Include="Gameplay\Component.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\OutputSoundFile.hpp">
+    <ClInclude Include="Util\Rect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\Sound.hpp">
+    <ClInclude Include="Platformer\PlatformerApp.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundBuffer.hpp">
+    <ClInclude Include="Gameplay\Components\CameraComponent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundBufferRecorder.hpp">
+    <ClInclude Include="App\PerfTimer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileFactory.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileReader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundFileWriter.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundRecorder.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundSource.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio\SoundStream.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\BlendMode.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\CircleShape.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Color.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\ConvexShape.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Drawable.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Export.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Font.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Glsl.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Glyph.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Image.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\PrimitiveType.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Rect.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RectangleShape.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderStates.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderTarget.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderTexture.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\RenderWindow.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Shader.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Shape.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Sprite.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Text.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Texture.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Transform.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Transformable.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\Vertex.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\VertexArray.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\VertexBuffer.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics\View.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Export.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Ftp.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Http.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\IpAddress.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Packet.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\Socket.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\SocketHandle.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\SocketSelector.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\TcpListener.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\TcpSocket.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network\UdpSocket.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Clock.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Err.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Export.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\FileInputStream.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\InputStream.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Lock.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\MemoryInputStream.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Mutex.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\NativeActivity.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\NonCopyable.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Sleep.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\String.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Thread.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\ThreadLocal.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\ThreadLocalPtr.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Time.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Utf.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Vector2.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System\Vector3.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Clipboard.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Context.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\ContextSettings.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Cursor.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Event.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Export.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\GlResource.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Joystick.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Keyboard.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Mouse.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Sensor.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Touch.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\VideoMode.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\Window.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\WindowHandle.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Window\WindowStyle.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Audio.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Config.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\GpuPreference.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Graphics.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Main.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\Network.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\OpenGL.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="External\SFML-2.5.1\include\SFML\System.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-audio-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-graphics-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-main-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-network-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-system-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Debug\sfml-window-d.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-audio.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-graphics.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-main.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-network.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-system.lib" />
-    <Library Include="External\SFML-2.5.1\lib\Release\sfml-window.lib" />
   </ItemGroup>
 </Project>
