Add basic joystick handling and debug text.

--- a/Silhouette.vcxproj
+++ b/Silhouette.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="Gameplay\Components\BoundsDrawComponent.cpp" />
     <ClCompile Include="Gameplay\Components\CameraComponent.cpp" />
     <ClCompile Include="Gameplay\Components\PointLightComponent.cpp" />
+    <ClCompile Include="Gameplay\Components\TextComponent.cpp" />
     <ClCompile Include="Gameplay\RenderManager.cpp" />
     <ClCompile Include="Platformer\Lights\StrobeLight.cpp" />
     <ClCompile Include="Platformer\Main.cpp" />
@@ -186,9 +187,11 @@
     <ClInclude Include="Gameplay\Components\CameraComponent.h" />
     <ClInclude Include="Gameplay\Components\PointLightComponent.h" />
     <ClInclude Include="Gameplay\Components\SpriteComponent.h" />
+    <ClInclude Include="Gameplay\Components\TextComponent.h" />
     <ClInclude Include="Gameplay\GameObject.h" />
     <ClInclude Include="Gameplay\Gameplay.h" />
     <ClInclude Include="Gameplay\GameSystem.h" />
+    <ClInclude Include="Gameplay\RenderLayer.h" />
     <ClInclude Include="Gameplay\RenderManager.h" />
     <ClInclude Include="Gameplay\WorldGrid\LoadWorld.h" />
     <ClInclude Include="Gameplay\WorldGrid\ObjectBucket.h" />
