--- a/Silhouette.vcxproj
+++ b/Silhouette.vcxproj
@@ -138,11 +138,13 @@
     <ClCompile Include="App\GameApp.cpp" />
     <ClCompile Include="App\InputEventManager.cpp" />
     <ClCompile Include="App\PerfTimer.cpp" />
+    <ClCompile Include="Gameplay\Components\AreaLightComponent.cpp" />
     <ClCompile Include="Gameplay\Components\BoundsDrawComponent.cpp" />
     <ClCompile Include="Gameplay\Components\CameraComponent.cpp" />
     <ClCompile Include="Gameplay\Components\PointLightComponent.cpp" />
     <ClCompile Include="Gameplay\Components\TextComponent.cpp" />
     <ClCompile Include="Gameplay\RenderManager.cpp" />
+    <ClCompile Include="Platformer\Lights\AreaLight.cpp" />
     <ClCompile Include="Platformer\Lights\StrobeLight.cpp" />
     <ClCompile Include="Platformer\Main.cpp" />
     <ClCompile Include="App\ShaderManager.cpp" />
@@ -161,6 +163,7 @@
     <ClCompile Include="Platformer\PlatformerApp.cpp" />
     <ClCompile Include="Platformer\Player.cpp" />
     <ClCompile Include="Platformer\SpawnByName.cpp" />
+    <ClCompile Include="Util\ColourUtil.cpp" />
     <ClCompile Include="Util\Random.cpp" />
     <ClCompile Include="Core\Reference.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\TilePatch.cpp" />
@@ -183,6 +186,7 @@
     <ClInclude Include="External\Pugixml\pugiconfig.hpp" />
     <ClInclude Include="External\Pugixml\pugixml.hpp" />
     <ClInclude Include="Gameplay\Component.h" />
+    <ClInclude Include="Gameplay\Components\AreaLightComponent.h" />
     <ClInclude Include="Gameplay\Components\BoundsDrawComponent.h" />
     <ClInclude Include="Gameplay\Components\CameraComponent.h" />
     <ClInclude Include="Gameplay\Components\PointLightComponent.h" />
@@ -199,10 +203,12 @@
     <ClInclude Include="Gameplay\WorldGrid\TileConstants.h" />
     <ClInclude Include="Gameplay\World.h" />
     <ClInclude Include="Gameplay\WorldGrid\WorldGrid.h" />
+    <ClInclude Include="Platformer\Lights\AreaLight.h" />
     <ClInclude Include="Platformer\Lights\StrobeLight.h" />
     <ClInclude Include="Platformer\PlatformerApp.h" />
     <ClInclude Include="Platformer\Player.h" />
     <ClInclude Include="Platformer\SpawnByName.h" />
+    <ClInclude Include="Util\ColourUtil.h" />
     <ClInclude Include="Util\Rect.h" />
     <ClInclude Include="Util\MapUtil.h" />
     <ClInclude Include="Util\Math.h" />
