--- a/Silhouette.vcxproj.filters
+++ b/Silhouette.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="App\WindowManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="UserInterface\WidgetManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\LightShader.frag">
@@ -271,6 +274,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="App\WindowManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UserInterface\WidgetManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
