--- a/Silhouette.vcxproj
+++ b/Silhouette.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Util\Random.cpp" />
     <ClCompile Include="Core\Reference.cpp" />
     <ClCompile Include="Gameplay\WorldGrid\TilePatch.cpp" />
+    <ClCompile Include="Util\Rect.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Shaders\HitFlash.frag" />
@@ -236,6 +237,7 @@
     <ClInclude Include="Util\VectorUtil.h" />
   </ItemGroup>
   <ItemGroup>
+    <Text Include="Notes\Architecture.txt" />
     <Text Include="Notes\ComponentTemplate.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
