Add pause button.

--- a/Silhouette.vcxproj.filters
+++ b/Silhouette.vcxproj.filters
@@ -308,5 +308,6 @@
   <ItemGroup>
     <Text Include="Notes\ComponentTemplate.txt" />
     <Text Include="Notes\Architecture.txt" />
+    <Text Include="Notes\Planning\Pause.txt" />
   </ItemGroup>
 </Project>
