--- a/Silhouette.vcxproj
+++ b/Silhouette.vcxproj
@@ -239,6 +239,7 @@
   <ItemGroup>
     <Text Include="Notes\Architecture.txt" />
     <Text Include="Notes\ComponentTemplate.txt" />
+    <Text Include="Notes\Planning\Pause.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
